mergeOrder api
